--- a/config.json.tt
+++ b/config.json.tt
@@ -2,5 +2,6 @@
     "reportDir": "reports/",
     "dataAPIUrl": "[% data_api_url %]",
     "wikiUrl": "https://en.wikipedia.org/w/api.php",
-    "templatePath": "[% template_dir %]/gr-template.html"
+    "templatePath": "[% template_dir %]/gr-template.html",
+    "referencesPath": "[% template_dir %]/references.json"
 }
