--- a/templates/gr-template.html
+++ b/templates/gr-template.html
@@ -117,6 +117,10 @@
                 height: 150px;
             }
 
+            ol.references li {
+                margin-bottom: 1em;
+            }
+
             .clearfix:after {
                 visibility: hidden;
                 display: block;
