--- a/templates/gr-template.html
+++ b/templates/gr-template.html
@@ -411,7 +411,7 @@
         <section>
             <h2>Specialty Genes</h2>
             <p>
-                Many of the genes annotated in {{gto.genome_id}} have homology to known known
+                Many of the genes annotated in {{gto.genome_id}} have homology to known
                 transporters<ref>Saier Jr, et al. 2015</ref>, virulence factors<ref>Mao, et al. 2015; Chen, et al. 2016</ref>,
                 drug targets<ref>Zhu, et al. 2009; Law, et al. 2014</ref>,
                 and antibiotic resistance genes<ref>McArthur, et al. 2013</ref>.
