move unneeded deps

--- a/templates/gr-template.html
+++ b/templates/gr-template.html
@@ -258,15 +258,11 @@
                     </tr>
                     <tr>
                         <td>Genome Length</td>
-                        <td class="align-right">
-                            {{addCommas genome_length 0}} bp
-                        </td>
+                        <td class="align-right">{{addCommas genome_length 0}} bp</td>
                     </tr>
                     <tr>
                         <td>Contig N50</td>
-                        <td class="align-right">
-                            {{addCommas genome_metrics.N50 0}}
-                        </td>
+                        <td class="align-right">{{addCommas genome_metrics.N50 0}}</td>
                     </tr>
                     <tr>
                         <td>Chromosomes</td>
